--- a/sdks/java/container/Dockerfile
+++ b/sdks/java/container/Dockerfile
@@ -38,14 +38,9 @@ COPY target/NOTICE /opt/apache/beam/
 # copy third party licenses
 ADD target/third_party_licenses /opt/apache/beam/third_party_licenses/
 
-# Add golang licenses. Because the go-license directory may be empty if
-# pull_licenses is false, and COPY fails if there are no files,
-# copy an extra LICENSE file then remove it.
-COPY target/LICENSE target/go-licenses/* /opt/apache/beam/third_party_licenses/golang/
-RUN rm /opt/apache/beam/third_party_licenses/golang/LICENSE
+# Remove license dir if pull_licenses false
 RUN if [ "${pull_licenses}" = "false" ] ; then \
-    # Remove above license dir if pull licenses false
-    rm -rf /opt/apache/beam/third_party_licenses ; \
-   fi
+        rm -rf /opt/apache/beam/third_party_licenses ; \
+    fi
 
 ENTRYPOINT ["/opt/apache/beam/boot"]
