--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -61,6 +61,7 @@ jobs:
     name: Build python source distribution
     outputs:
       is_rc: ${{ steps.is_rc.outputs.is_rc }}
+      rc_num: ${{ steps.get_rc_version.outputs.RC_NUM }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -128,35 +129,35 @@ jobs:
           RELEASE_VERSION=${{ steps.get_rc_version.outputs.RELEASE_VERSION }}
           RC_NUM=${{ steps.get_rc_version.outputs.RC_NUM }}
           sed -i -e "s/${RELEASE_VERSION}/${RELEASE_VERSION}rc${RC_NUM}/g" apache_beam/version.py
-      - name: Build source with rc tag
+      - name: Build RC source
         if: steps.is_rc.outputs.is_rc == 1
         working-directory: ./sdks/python
         run: python setup.py sdist --formats=zip
-      - name: Add checksums rc
+      - name: Add RC checksums
         if: steps.is_rc.outputs.is_rc == 1
         working-directory: ./sdks/python/dist
         run: |
           file=$(ls | grep .zip | head -n 1)
           sha512sum $file > ${file}.sha512
-      - name: Unzip source rc
+      - name: Unzip RC source
         if: steps.is_rc.outputs.is_rc == 1
         working-directory: ./sdks/python
         run: unzip dist/$(ls dist | grep .zip | head -n 1)
-      - name: Rename source directory rc
+      - name: Rename RC source directory
         if: steps.is_rc.outputs.is_rc == 1
         working-directory: ./sdks/python
         run: mv $(ls | grep apache-beam) apache-beam-source-rc
-      - name: Upload source tagged rc as artifact
+      - name: Upload RC source as artifact
         if: steps.is_rc.outputs.is_rc == 1
         uses: actions/upload-artifact@v2
         with:
-          name: source_rc
+          name: source_rc${{ steps.get_rc_version.outputs.RC_NUM }}
           path: sdks/python/apache-beam-source-rc
-      - name: Upload compressed sources tagged rc as artifacts
+      - name: Upload compressed RC sources as artifacts
         if: steps.is_rc.outputs.is_rc == 1
         uses: actions/upload-artifact@v2
         with:
-          name: source_zip_rc
+          name: source_zip_rc${{ steps.get_rc_version.outputs.RC_NUM }}
           path: sdks/python/dist
 
 
@@ -218,7 +219,7 @@ jobs:
       if: ${{ needs.build_source.outputs.is_rc == 1 }}
       uses: actions/download-artifact@v2
       with:
-        name: source_rc
+        name: source_rc${{ needs.build_source.outputs.rc_num }}
         path: apache-beam-source-rc
     - name: Install Python
       uses: actions/setup-python@v2
@@ -268,7 +269,7 @@ jobs:
       if: ${{ needs.build_source.outputs.is_rc == 1 }}
       uses: actions/upload-artifact@v2
       with:
-        name: wheelhouse-rc-${{ matrix.os_python.os }}
+        name: wheelhouse-rc${{ needs.build_source.outputs.rc_num }}-${{ matrix.os_python.os }}
         path: apache-beam-source-rc/wheelhouse/
 
   upload_wheels_to_gcs:
