--- a/.test-infra/kubernetes/influxdb/influxdb.yml
+++ b/.test-infra/kubernetes/influxdb/influxdb.yml
@@ -59,6 +59,8 @@ spec:
             secretKeyRef:
               name: influxdb-creds
               key: INFLUXDB_GRAPHITE_ENABLED
+        - name: INFLUXDB_HTTP_AUTH_ENABLED
+	  value: false
         ports:
         - containerPort: 8086
 ---
