--- a/.test-infra/kubernetes/influxdb/influxdb.yml
+++ b/.test-infra/kubernetes/influxdb/influxdb.yml
@@ -42,7 +42,7 @@ spec:
     spec:
       containers:
       - name: influxdb
-        image: influxdb
+        image: influxdb:1.8
         env:
         - name: INFLUXDB_USER
           valueFrom:
@@ -59,8 +59,6 @@ spec:
             secretKeyRef:
               name: influxdb-creds
               key: INFLUXDB_GRAPHITE_ENABLED
-        - name: INFLUXDB_HTTP_AUTH_ENABLED
-          value: "false"
         ports:
         - containerPort: 8086
 ---
